src/compiler/src/types/snapshots/struktur__types__check__tests__generalize_mutually_recursive-2.snap
---
source: src/compiler/src/types/check.rs
expression: "types.get(\"b\").unwrap()"
---
Forall:
  ty:
    vars:
      - Inferred: 0
    generalized:
      Function:
        ty:
          param:
            Primitive:
              ty: Unit
              provenance:
                LiteralPattern:
                  idx: 11
                  version: 1
          ret:
            Var:
              ty:
                Inferred: 0
              provenance:
                InferredVar:
                  forall:
                    GeneralizeLet:
                      idx: 18
                      version: 1
        provenance:
          Lambda:
            idx: 17
            version: 1
  provenance:
    Generalize:
      forall:
        GeneralizeLet:
          idx: 18
          version: 1
