src/compiler/src/types/snapshots/struktur__types__check__tests__generalize_mutually_recursive.snap
---
source: src/compiler/src/types/check.rs
expression: "types.get(\"a\").unwrap()"
---
Forall:
  ty:
    vars:
      - Inferred: 1
    generalized:
      Function:
        ty:
          param:
            Primitive:
              ty: Unit
              provenance:
                Literal:
                  idx: 14
                  version: 1
          ret:
            Var:
              ty:
                Inferred: 1
              provenance:
                InferredVar:
                  forall:
                    GeneralizeLet:
                      idx: 9
                      version: 1
        provenance:
          Application:
            idx: 15
            version: 1
  provenance:
    Generalize:
      forall:
        GeneralizeLet:
          idx: 9
          version: 1
