src/compiler/src/types/snapshots/struktur__types__check__tests__generalize_self_contained.snap
---
source: src/compiler/src/types/check.rs
expression: "types.get(\"id\").unwrap()"
---
Forall:
  ty:
    vars:
      - Inferred: 0
    generalized:
      Function:
        ty:
          param:
            Var:
              ty:
                Inferred: 0
              provenance:
                InferredVar:
                  forall:
                    GeneralizeLet:
                      idx: 9
                      version: 1
          ret:
            Var:
              ty:
                Inferred: 0
              provenance:
                InferredVar:
                  forall:
                    GeneralizeLet:
                      idx: 9
                      version: 1
        provenance:
          Lambda:
            idx: 8
            version: 1
  provenance:
    Generalize:
      forall:
        GeneralizeLet:
          idx: 9
          version: 1
